create initial ui and view binding data logic. create equation item design. create CustomProgressView.kt.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MathQuestionApp</string>
+    <string name="template_equation">3x5x5+8+6x9</string>
 </resources>
